--- a/index.html
+++ b/index.html
@@ -4,9 +4,295 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
-    <link rel="stylesheet" href="./style.css">
+    <style>
+/* next button */
+.btn-class-name {
+    --color: 255, 255, 255; 
+    border-radius: .5em;
+    transition: .3s;
+    background-color: rgba(var(--color), 0);
+    color: #fff; 
+    fill: #fff;
+    font-family: monospace;
+    font-weight: bolder;
+    font-size: x-large;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    display: flex;
+    align-items: center;
+    padding: .5em 1em;
+}
+
+.btn-class-name span {
+    transform: scale(.8);
+    transition: .3s;
+    margin-left: 10px;
+}
+
+.btn-class-name:hover span {
+    transform: scale(1);
+}
+
+.btn-class-name svg {
+    font-size: 0;
+    transform: scale(1) translateX(0%) rotate(270deg);
+    transition: .3s;
+}
+
+.btn-class-name:hover svg {
+    font-size: 20px;
+    transform: scale(1) translateX(20%) rotate(0deg);
+}
+
+/* previous button */
+.btn-class-name-prev {
+    --color: 255, 255, 255; 
+    border-radius: .5em;
+    transition: .3s;
+    background-color: rgba(var(--color), 0);
+    color: #fff; 
+    fill: #fff;
+    font-family: monospace;
+    font-weight: bolder;
+    font-size: x-large;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    display: flex;
+    align-items: center;
+    padding: .5em;
+}
+
+.btn-class-name-prev span {
+    transform: scale(.8);
+    transition: .3s;
+    margin-left: 10px;
+}
+
+.btn-class-name-prev:hover span {
+    transform: scale(1);
+}
+
+.btn-class-name-prev svg {
+    font-size: 0;
+    transform: scale(1) translateX(0%) rotate(-180deg);
+    transition: .3s;
+}
+
+.btn-class-name-prev:hover svg {
+    font-size: 20px;
+    transform: scale(1) translateX(20%) rotate(180deg);
+}
+
+/* form box */
+.centered-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin-top: -100px;
+    display: none;
+}
+
+.centered-card-active {
+    display: flex;
+}
+
+.card {
+    background: #fff;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    text-align: center;
+    max-width: 700px;
+    width: 100%;
+    position: relative;
+    overflow:auto;
+    border-radius: 10px;
+}
+
+.card h2 {
+    font-size: 24px;
+    font-weight: 300;
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+.pricing {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content:center;
+    margin: 0 20px;
+    margin-bottom: 50px;
+}
+
+.radio-box {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    margin: 20px;
+    width: 120px;
+    height: 120px;
+    border-radius: 5px;
+    position: relative;
+    font-weight: 500;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border: 2px solid #130101;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.radio-box input[type="radio"]:checked + .radio-box{
+    border: 2px solid #bdc3c9;
+    background-color: #174880;
+}
+
+.radio-box input[type="radio"] {
+    position: absolute;
+    top: 8px;
+    left: 5px;
+}
+
+.radio-box img {
+    width: 40px;
+    height: 40px;
+    margin-top: 30px; 
+    margin-bottom: 10px;
+}
+
+.radio-box span {
+    display: block;
+}
+
+.button-strip {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    background-color: #fea201;
+    margin: -20px;
+}
+.first {
+    justify-content: flex-end;
+}
+
+/* progress bar */
+.progressbar-wrapper {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: -50px;
+}
+
+
+.progressbar {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    counter-reset: step;
+    margin: 2rem 0 4rem;
+    width: 500px;
+}
+.progressbar::before, .progress {
+    content: "";
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 4px;
+    width: 100%;
+    background-color: #dcdcdc;
+    z-index: -1;
+}
+.progress {
+    background-color: var(--primary-color);
+    width: 0%;
+    transition: 0.3s;
+    z-index: -1;
+}
+
+.progress-step {
+    width: 2.1875rem;
+    height: 2.1875rem;
+    background-color: #dcdcdc;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.progress-step::before {
+    counter-increment: step;
+    content: counter(step);
+}
+.progress-step::after {
+    content: attr(data-title);
+    position: absolute;
+    top: calc(100% + 0.5rem);
+    font-size: 0.85rem;
+    color: #666;
+}
+.progress-step-active {
+    background-color: #fea201;
+    color: #f3f3f3;
+}
+
+/* input fields */
+.input-div { 
+    display: block; 
+    margin-top: 30px;
+}
+
+.input-div input {
+    width: 100%;
+    padding: 15px; 
+    font-size: 18px; 
+}
+
+.input-class {
+    border: 1px solid #dcdcdc;
+    border-radius: 5px;
+    outline: none;
+    transition: .3s;
+}
+
+.input-div input:focus {
+    border: 1px solid #3b0e8e;
+}
+
+.form-box {
+    display: flex;
+    flex-direction: row; 
+    justify-content:space-around;
+    margin-bottom: 40px;
+    padding: auto;
+    height: 130px;
+}
+
+.form-text {
+    font-size: 14px;
+    font-weight: 300;
+    margin-bottom: 25px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+.goog-te-gadget {
+    font-family: arial;
+    font-size: 11px;
+    color: #666;
+    white-space: nowrap;
+    position: fixed;
+    top: 0;
+
+    </style>
 </head>
 <body>
+
+<div id="google_translate_element">
 
     <!-- Dein Berufsstatus? -->
     <section class="form-step centered-card centered-card-active">
@@ -40,19 +326,12 @@
                 <label for="unemployed">
                     <div class="radio-box">
                         <input type="radio" id="unemployed" name="berufsstatus" value="unemployed">
-                        <img src="https://eu-files.jotform.com/jufs/samplett/form_files/1.62f629e29ccaf9.94615851.png?md5=SfGVdR1exGt-bgQmgmTtkA&expires=1698231528" alt="Student Icon">
-                        student:in
+                        <img src="https://i.pinimg.com/564x/a5/5f/e6/a55fe60c8ec337166bcc850771ac2058.jpg" alt="Student Icon">
+                        Angestellter:in
                     </div>
                 </label>
             </div>
-            <div class="button-strip">
-                <button class="btn-class-name-prev">
-                    <svg viewBox="0 0 320 512" height="1em" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z">
-                    </path>
-                    </svg>
-                    <span>ZURUCK</span>
-                </button>
+            <div class="button-strip first">
                 <button class="btn-class-name btn-next">
                     <span>WEITER</span>
                     <svg viewBox="0 0 320 512" height="1em" xmlns="http://www.w3.org/2000/svg">
@@ -150,30 +429,32 @@
         <div class="card">
             <h2>Name</h2>
             <p class="form-text">Bitte hinterlasse uns deinen Namen, damit wir dich kontaktieren können.</p>
-            <div class="form-box">
-                <div class="input-div">
-                    <input class="input-class" type="text" id="firstname" name="firstname" placeholder="Vorname" required>
+            <form>
+                <div class="form-box">
+                    <div class="input-div">
+                        <input class="input-class" type="text" id="firstname" name="firstname" placeholder="Vorname" required oninput="allowAlphabets(this)">
+                    </div>
+                    <div class="input-div">
+                        <input class="input-class" type="text" id="lastname" name="lastname" placeholder="Nachname" required oninput="allowAlphabets(this)">
+                    </div>
                 </div>
-                <div class="input-div">
-                    <input class="input-class" type="text" id="lastname" name="lastname" placeholder="Nachname" required>
-                </div>
-            </div>
-            <div class="button-strip">
-                <button class="btn-class-name-prev btn-prev">
-                    <svg viewBox="0 0 320 512" height="1em" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z">
-                    </path>
-                    </svg>
-                    <span>ZURUCK</span>
-                </button>
-                <button class="btn-class-name btn-next">
-                    <span>WEITER</span>
-                    <svg viewBox="0 0 320 512" height="1em" xmlns="http://www.w3.org/2000/svg">
+                <div class="button-strip">
+                    <button class="btn-class-name-prev btn-prev">
+                        <svg viewBox="0 0 320 512" height="1em" xmlns="http://www.w3.org/2000/svg">
                         <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z">
-                    </path>
-                    </svg>
-                </button>
-            </div>
+                        </path>
+                        </svg>
+                        <span>ZURUCK</span>
+                    </button>
+                    <button class="btn-class-name btn-next" id="next-button">
+                        <span>WEITER</span>
+                        <svg viewBox="0 0 320 512" height="1em" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z">
+                        </path>
+                        </svg>
+                    </button>
+                </div>
+            </form>
         </div>
     </section>
 
@@ -184,7 +465,7 @@
             <p class="form-text">Bitte hinterlasse uns deine E-Mail, damit wir dich kontaktieren können.</p>
             <div class="form-box">
                 <div class="input-div">
-                    <input class="input-class" type="text" id="email" name="email" placeholder="Email" required>
+                    <input class="input-class" type="email" id="email" name="email" placeholder="Email" required>
                 </div>
             </div>
             <div class="button-strip">
@@ -213,7 +494,7 @@
             <p class="form-text">Bitte hinterlasse uns deine Telefonnummer, damit wir dich kontaktieren können.</p>
             <div class="form-box">
                 <div class="input-div">
-                    <input class="input-class" type="phone2numeric" id="number" name="number" placeholder="Telefonnummer" required>
+                    <input class="input-class" type="phone2numeric" id="number" name="number" placeholder="Telefonnummer" required oninput="allowNumbers(this)">
                 </div>
             </div>
             <div class="button-strip">
@@ -241,12 +522,17 @@
             <h2>Thankyou</h2>
             <p class="form-text">Bitte hinterlasse uns deine Telefonnummer, damit wir dich kontaktieren können.</p>
             <div class="form-box">
-                <img src="https://img.freepik.com/free-vector/thank-you-concept-illustration_114360-12887.jpg?w=740&t=st=1698252852~exp=1698253452~hmac=4345e36c7cf3dfdf5b70c918d3337be362ff5a2bd130a6e83df1a54e10080d3e">
+                <img src="https://user-images.githubusercontent.com/98182168/278421732-6f332bb7-b0e7-42de-8870-93ad9ea1534b.png" height='190px'>
             </div>
         </div>
     </section>
 
     <!-- Progress Bar  -->
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+          new google.translate.TranslateElement({pageLanguage: 'de', includedLanguages: 'en'}, 'google_translate_element');
+        }
+    </script>
     <section class="progressbar-wrapper">
         <div class="progressbar">
             <div class="progress" id="progress"></div>
@@ -258,9 +544,117 @@
             <div class="progress-step" title="Telefonnummer"></div>
         </div>
     </section>
+</div>
+<script>
+    // HTML form elements
+    const prevBtns = document.querySelectorAll(".btn-prev");
+    const nextBtns = document.querySelectorAll(".btn-next");
+    const progress = document.querySelector(".progress");
+    const formSteps = document.querySelectorAll(".form-step");
+    const progressSteps = document.querySelectorAll(".progress-step");
+
+    let formStepsNum = 0;
+
+    // Event Listener for Next Button.
+    nextBtns.forEach((btn) => {
+        btn.addEventListener("click", (e) => {
+            e.preventDefault(); // Prevent the form from submitting and the page from refreshing.
     
-    <script src="./script.js"></script>
+            if (formStepsNum === 3) {
+                if (validateNameInputs()) {
+                    formStepsNum = 4; // Move to the next step.
+                    updateFormSteps();
+                    updateProgressbar();
+                } else {
+                    alert("Please enter the firstname and lastname.");
+                }
+            } else if (formStepsNum === 4) {
+                if (validateEmailInput()) {
+                    formStepsNum = 5; // Move to the next step.
+                    updateFormSteps();
+                    updateProgressbar();
+                } else {
+                    alert("Please fill in the email field.");
+                }
+            } else if (formStepsNum === 5) {
+                if (validateNumberInput()) {
+                    formStepsNum = 6; // Move to the next step.
+                    updateFormSteps();
+                    updateProgressbar();
+                } else {
+                    alert("Please fill in the number field.");
+                }
+            } else {
+                // Only increase formStepsNum if none of the conditions were met.
+                formStepsNum++;
+                updateFormSteps();
+                updateProgressbar();
+            }
+        });
+    });
+    
+
+    // Function to validate the name inputs.
+    function validateNameInputs() {
+        const firstnameInput = document.getElementById("firstname");
+        const lastnameInput = document.getElementById("lastname");
+        const firstnameValue = firstnameInput.value.trim();
+        const lastnameValue = lastnameInput.value.trim();
+
+        return firstnameValue !== "" || lastnameValue !== "";
+    }
+
+    function validateEmailInput() {
+        const emailInput = document.getElementById("email");
+        const emailValue = emailInput.value.trim();
+
+        return emailValue !== "";
+    }
+
+    function validateNumberInput() {
+        const numberInput = document.getElementById("number");
+        const numberValue = numberInput.value.trim();
+
+        return numberValue !== "";
+    }
+
+    // Event Listener for Back Button.
+    prevBtns.forEach((btn) => {
+        btn.addEventListener("click", () => {
+            formStepsNum--;
+            updateFormSteps();
+            updateProgressbar();
+        });
+    });
+
+    // Updates Form Items
+    function updateFormSteps() {
+        formSteps.forEach((formStep) => {
+            formStep.classList.contains("centered-card-active") &&
+                formStep.classList.remove("centered-card-active");
+        });
+        formSteps[formStepsNum].classList.add("centered-card-active");
+    }
+
+    // Updates Progress Bar
+    function updateProgressbar() {
+        progressSteps.forEach((progressStep, index) => {
+            if (index < formStepsNum + 1) {
+                progressStep.classList.add('progress-step-active');
+            } else {
+                progressStep.classList.remove('progress-step-active');
+            }
+        });
+        progress.style.width = ((formStepsNum) / (progressSteps.length - 1)) * 100 + "%";
+    }
+    function allowAlphabets(input) {
+        input.value = input.value.replace(/[^A-Za-z]/g, '');
+    }
+    function allowNumbers(input) {
+        input.value = input.value.replace(/[^0-9]/g, '');
+    }            
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
 </body>
 </html>
-
 
