--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
 .card h2 {
     font-size: 24px;
     font-weight: 300;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+    margin-left: 35px;
 }
 
 .pricing {
@@ -136,10 +138,10 @@
     align-items: center;
     flex-direction: column;
     text-align: center;
-    margin: 20px;
-    width: 120px;
-    height: 120px;
-    border-radius: 5px;
+    margin: 10px;
+    width: 140px;
+    height: 140px;
+    border-radius: 3px;
     position: relative;
     font-weight: 500;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -160,9 +162,9 @@
 }
 
 .radio-box img {
-    width: 40px;
-    height: 40px;
-    margin-top: 30px; 
+    width: 60px;
+    height: 60px;
+    margin-top: 30px;
     margin-bottom: 10px;
 }
 
@@ -303,7 +305,7 @@
                     <div class="radio-box">
                         <input type="radio" id="student" name="berufsstatus" value="student">
                         <img src="https://eu-files.jotform.com/jufs/samplett/form_files/azubi.62861c20e0d8e1.58690235.png" alt="Student Icon">
-                        Student
+                        Angestellt
                     </div>
                 </label>
     
