--- a/index.html
+++ b/index.html
@@ -280,8 +280,11 @@
     font-size: 14px;
     font-weight: 300;
     margin-bottom: 25px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: left;
+    margin-left: 35px;
 }
+
 .goog-te-gadget {
     font-family: arial;
     font-size: 11px;
