--- a/index.html
+++ b/index.html
@@ -292,7 +292,21 @@
     white-space: nowrap;
     position: fixed;
     top: 0;
+}
 
+@media screen and (max-width: 690px) {
+    .pricing {
+        flex-direction: column;
+        align-items: center;
+    }
+    .progressbar-wrapper {
+        display: none;
+    }
+    .centered-card {
+        height: 142vh;
+        margin-top: 0;
+    }
+}
     </style>
 </head>
 <body>
